gccida/c1/text_section
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/text_section/src/varasm.c:700:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/text_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/text_section/src/varasm.c:703:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_text; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/text_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/text_section/src/obj/varasm.o] Error 1
